[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
texting_robots = "0.2"
tokio = { version = "1.51.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
